--- a/.github/workflows/Databricks-CICD.yml
+++ b/.github/workflows/Databricks-CICD.yml
@@ -133,7 +133,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       resourceGroupName: 'MYN-databricks-Dev'
-      databricksWorkspaceName: 'Databricks-MyProject-MG-Dev'
+      databricksWorkspaceName: 'MYN-databricks-Dev'
       keyVaultName: 'MYN-KeyVault-Dev'
       NotebookDeploymentPath: '/MyProject'
       GitNotebookPath: 'notebooks/MyProject'
@@ -333,7 +333,7 @@ jobs:
       with:
         inlineScript: |
           az group create --location 'EastUS2' --name 'MYN-databricks-QA'
-          az deployment group create --resource-group 'MYN-databricks-QA' --template-file $GITHUB_WORKSPACE/ARM-Templates/azuredeploy.databricks.json --parameters @$GITHUB_WORKSPACE/ARM-Templates/parameters.databricks.json --parameters workspaceName='Databricks-MyProject-MG-QA'
+          az deployment group create --resource-group 'MYN-databricks-QA' --template-file $GITHUB_WORKSPACE/ARM-Templates/azuredeploy.databricks.json --parameters @$GITHUB_WORKSPACE/ARM-Templates/parameters.databricks.json --parameters workspaceName='MYN-databricks-QA'
     # Deploy Azure KeyVault
     - name: Deploy ARM Template (KeyVault)
       uses: azure/CLI@v1
